
alogview
===============================================
Fixed a bug in alogview affecting the construction of the collective
objective function to be rendered. Previously it was not properly 
applying the weights of each function.

alogscan
===============================================
Fixed a bug in alogscan that would result in a segfault just prior
to early exit on detected invalid input file. For example an empty
alog file.

pEchoVar
===============================================
o Added Boolean Switching. For a configuration "Echo = FOO !-> BAR",
  if a string representing a Boolean value is published to FOO, a
  string representing the opposite Boolean value is published to
  BAR. The case of the strings is matched.

uFldNodeComms
===============================================
o Fixed a bug where some messages were occasionally being dropped 
  despite meeting all the communications criteria.


BHV_AvoidColregsV17
===============================================
o Turned off debugging output inadvertantly left enabled.

BHV_Waypoint
===============================================
o Added lead_condition to allow the user to specify a logic condition
  that must be met in order for the trackline following to be enabled.
  This allows for coordination with any collision avoidance behavior 
  temporarily turn off trackline following during an avoidance encounter.
  See m2_track_condition mission.

uFldCollisionDetect Documentation
===============================================
o substantial additions and corrections

 
pMarineViewer
===============================================

o Added functionality to the Commander pop-up window including
  auto-adjusting button widths, and the ability to add color to a
  button to make it easier for an operator to find and hit an
  emergency button.

o Updated the pMarineViewer documentation to describe commander
  pop-up window functionality. The commander pop-up window feature