@@ -74,6 +74,10 @@ void showHelpAndExit()
   blk("      Display the release version of uMAC.                      ");
   mag("  --terse,-t                                                    ");
   blk("      Super condensed uMAC header output for small terminals    ");
+  mag("  --proc","=<ProcessName>                                       ");
+  blk("      Specify initial process to scope on.                      ");
+  mag("  --node","=<NodeName>                                          ");
+  blk("      Specify initial node to scope on.                         ");
   blk("                                                                ");
   blk("Note: If argv[2] does not otherwise match a known option,       ");
   blk("      then it will be interpreted as a run alias. This is       ");
